Changes for 3.4.5rc2

New features:
A.F....... [ZBX-12825] implemented delayed URL validation; enabled user macros containing URLs as valid; made URL validation as optional; improved URL validation (miks)

Bug fixes:
..F....... [ZBX-13176] fixed last item value retrieval errors in history manager (vjaceslavs)
..F....... [ZBX-12856] fixed empty host filter when adding dependent trigger in trigger edit form (gcalenko)
..F....... [ZBX-13024] fixed parsing "request" parameter for URLs without input parameters (Sasha)
........S. [ZBX-13153] fixed possibility that proxy last access updates are lost during cache reload (vso)
........S. [ZBX-13149] fixed possible crash in history syncer when processing deleted item (wiper)

--------------------------------------------------------------------------------
Changes for 3.4.5rc1

New features:
..F.....S. [ZBXNEXT-4002] implemented support for elasticsearch as history storage (abs, vjaceslavs, wiper)
..F....... [ZBX-12809] implemented overlay dialog centering using javascript (miks)

Bug fixes:
..F....... [ZBX-13190] fixed check for permissions to enable/disable actions (gcalenko)
.........T [ZBXNEXT-4223] performed network templates cleanup (vitaly)
........S. [ZBX-12974] fixed TLS connection to passive proxy error handling (gleb, valdis)
..F....... [ZBX-12714] fixed overflow property of svg (vjaceslavs)
.......PS. [ZBX-12925] fixed logic of commit/rollback operations (vjaceslavs)
..F....... [ZBX-13088] fixed incomplete data in notification reports for yearly report types (gcalenko)
........S. [ZBX-12887] fixed alert error message visibility to unrelated users (valdis)
.......PS. [ZBX-12497] improved VMware event log data collection and processing (gleb)
...G...... [ZBX-8054] relieved windows agent of dependency on MFC (valdis)
..F....... [ZBX-13024] fixed missed url search part in request login parameter (miks)
....I..... [ZBX-12798] added --with-libpcre-lib configure option (valdis)