@@ -184,10 +184,6 @@ function DBconnect(&$error) {
 		$DB['DB'] = null;
 	}
 
-	if (!$result && !ZBX_SHOW_TECHNICAL_ERRORS) {
-		$error = _('System error occurred. Please contact Zabbix administrator.');
-	}
-
 	return $result;
 }
 
